--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
 		<selenium.version>2.44.0</selenium.version>
 		<testng.version>6.8.8</testng.version>
 		<dbunit.version>2.5.0</dbunit.version>
+		<junit.version>4.11</junit.version>
+		<mokito.version>1.10.8</mokito.version>
+		<fest.assert.version>1.4</fest.assert.version>
+		<cucumber.version>1.2.0</cucumber.version>
 		<slf4j.log4j12.version>1.7.7</slf4j.log4j12.version>
 		<ant.version>1.9.4</ant.version>
 		<mysql.version>5.1.33</mysql.version>
@@ -50,6 +54,42 @@
 			<groupId>org.dbunit</groupId>
 			<artifactId>dbunit</artifactId>
 			<version>${dbunit.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mokito.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert</artifactId>
+			<version>${fest.assert.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>${cucumber.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>${cucumber.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>${cucumber.version}</version>
 		</dependency>
 
 		<dependency>
