--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<mokito.version>1.10.8</mokito.version>
 		<fest.assert.version>1.4</fest.assert.version>
 		<cucumber.version>1.2.0</cucumber.version>
+		<jbehave.version>3.9.5</jbehave.version>
 		<slf4j.log4j12.version>1.7.7</slf4j.log4j12.version>
 		<ant.version>1.9.4</ant.version>
 		<mysql.version>5.1.33</mysql.version>
@@ -86,22 +87,20 @@
 			<version>${cucumber.version}</version>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-testng</artifactId>
-			<version>${cucumber.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency> -->
+		<!-- <dependency> <groupId>info.cukes</groupId> <artifactId>cucumber-testng</artifactId> 
+			<version>${cucumber.version}</version> <exclusions> <exclusion> <groupId>junit</groupId> 
+			<artifactId>junit</artifactId> </exclusion> </exclusions> </dependency> -->
 
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-picocontainer</artifactId>
 			<version>${cucumber.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jbehave</groupId>
+			<artifactId>jbehave-core</artifactId>
+			<version>${jbehave.version}</version>
 		</dependency>
 
 		<dependency>
@@ -234,6 +233,43 @@
 					</includes>
 					<workingDirectory>target/</workingDirectory>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jbehave</groupId>
+				<artifactId>jbehave-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>embeddable-stories</id>
+						<phase>integration-test</phase>
+						<configuration>
+							<includes>
+								<include>**/*Stories.java</include>
+							</includes>
+							<ignoreFailureInStories>true</ignoreFailureInStories>
+							<ignoreFailureInView>true</ignoreFailureInView>
+						</configuration>
+						<goals>
+							<goal>run-stories-as-embeddables</goal>
+						</goals>
+					</execution>
+					<!-- <execution>
+						<id>map-stories</id>
+						<phase>integration-test</phase>
+						<configuration>
+							<includes>
+								<include>**/stories/*.story</include>
+							</includes>
+							<metaFilters>
+								<metaFilter>+author *</metaFilter>
+								<metaFilter>+theme *</metaFilter>
+								<metaFilter>-skip</metaFilter>
+							</metaFilters>
+						</configuration>
+						<goals>
+							<goal>map-stories-as-paths</goal>
+						</goals>
+					</execution> -->
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
