--- a/pom.xml
+++ b/pom.xml
@@ -7,22 +7,23 @@
 	<name>Shin Autotest</name>
 
 	<properties>
-		<selenium.version>2.44.0</selenium.version>
-		<testng.version>6.8.8</testng.version>
-		<dbunit.version>2.5.0</dbunit.version>
+		<selenium.version>2.52.0</selenium.version>
+		<appium.version>3.3.0</appium.version>
+		<testng.version>6.9.10</testng.version>
+		<dbunit.version>2.5.1</dbunit.version>
 		<junit.version>4.11</junit.version>
 		<mokito.version>1.10.8</mokito.version>
 		<fest.assert.version>1.4</fest.assert.version>
-		<cucumber.version>1.2.0</cucumber.version>
-		<jbehave.version>3.9.5</jbehave.version>
+		<cucumber.version>1.2.4</cucumber.version>
+		<jbehave.version>4.0.5</jbehave.version>
 		<slf4j.log4j12.version>1.7.7</slf4j.log4j12.version>
-		<ant.version>1.9.4</ant.version>
-		<mysql.version>5.1.33</mysql.version>
-		<velocity.version>1.4</velocity.version>
+		<ant.version>1.9.6</ant.version>
+		<mysql.version>5.1.38</mysql.version>
+		<velocity.version>1.5</velocity.version>
 		<reportng.version>1.1.4</reportng.version>
-		<guice.version>3.0</guice.version>
+		<guice.version>4.0</guice.version>
 		<jxl.version>2.6.12</jxl.version>
-		<jsch.version>0.1.51</jsch.version>
+		<jsch.version>0.1.53</jsch.version>
 		<gson.version>2.3</gson.version>
 		<httpclient.version>3.1</httpclient.version>
 		<spring.version>4.1.2.RELEASE</spring.version>
@@ -49,6 +50,12 @@
 			<artifactId>selenium-server</artifactId>
 			<version>${selenium.version}</version>
 			<type>jar</type>
+		</dependency>
+
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>${appium.version}</version>
 		</dependency>
 
 		<dependency>
@@ -252,23 +259,11 @@
 							<goal>run-stories-as-embeddables</goal>
 						</goals>
 					</execution>
-					<!-- <execution>
-						<id>map-stories</id>
-						<phase>integration-test</phase>
-						<configuration>
-							<includes>
-								<include>**/stories/*.story</include>
-							</includes>
-							<metaFilters>
-								<metaFilter>+author *</metaFilter>
-								<metaFilter>+theme *</metaFilter>
-								<metaFilter>-skip</metaFilter>
-							</metaFilters>
-						</configuration>
-						<goals>
-							<goal>map-stories-as-paths</goal>
-						</goals>
-					</execution> -->
+					<!-- <execution> <id>map-stories</id> <phase>integration-test</phase> 
+						<configuration> <includes> <include>**/stories/*.story</include> </includes> 
+						<metaFilters> <metaFilter>+author *</metaFilter> <metaFilter>+theme *</metaFilter> 
+						<metaFilter>-skip</metaFilter> </metaFilters> </configuration> <goals> <goal>map-stories-as-paths</goal> 
+						</goals> </execution> -->
 				</executions>
 			</plugin>
 		</plugins>
